<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Timer">

    <ProgressBar
        android:id="@+id/progress_Bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="384dp"
        android:layout_height="452dp"
        android:background="#00000000"
        android:indeterminateOnly="false"
        android:progressDrawable="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:progress="0" />

    <TextView
        android:id="@+id/colonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/be_vietnam_semibold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/progress_Bar"
        app:layout_constraintEnd_toEndOf="@+id/progress_Bar"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/progress_Bar"
        app:layout_constraintTop_toTopOf="@+id/progress_Bar"
        app:layout_constraintVertical_bias="0.475"
        tools:text=":" />

    <TextView
        android:id="@+id/secondsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/be_vietnam_semibold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/progress_Bar"
        app:layout_constraintEnd_toEndOf="@+id/progress_Bar"
        app:layout_constraintHorizontal_bias="0.623"
        app:layout_constraintStart_toStartOf="@+id/progress_Bar"
        app:layout_constraintTop_toTopOf="@+id/progress_Bar"
        app:layout_constraintVertical_bias="0.475"
        tools:text="00" />

    <TextView
        android:id="@+id/minutesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/be_vietnam_semibold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/progress_Bar"
        app:layout_constraintEnd_toEndOf="@+id/progress_Bar"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="@+id/progress_Bar"
        app:layout_constraintTop_toTopOf="@+id/progress_Bar"
        app:layout_constraintVertical_bias="0.475"
        tools:text="30" />

    <Button
        android:id="@+id/decrementMinutes"
        android:layout_width="140dp"
        android:layout_height="74dp"
        android:layout_marginStart="44dp"
        android:backgroundTint="#FFFEFE"
        android:fontFamily="@font/be_vietnam_semibold"
        android:text="@string/minus10"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:iconTint="#121212"
        app:layout_constraintBottom_toTopOf="@+id/quoteView"
        app:layout_constraintEnd_toEndOf="@+id/quoteView"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minutesText" />

    <Button
        android:id="@+id/incrementMinutes"
        android:layout_width="140dp"
        android:layout_height="74dp"
        android:backgroundTint="#FFFEFE"
        android:fontFamily="@font/be_vietnam_semibold"
        android:text="@string/add10"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:iconTint="#121212"
        app:layout_constraintBottom_toTopOf="@+id/quoteView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toEndOf="@+id/decrementMinutes"
        app:layout_constraintTop_toBottomOf="@+id/secondsText" />

    <TextView
        android:id="@+id/quoteView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/be_vietnam_semibold"
        android:gravity="center"
        android:text="@string/quoteText"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colonText"
        app:layout_constraintVertical_bias="0.813" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/be_vietnam_semibold"
        android:text="@string/start"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/quoteView"
        app:layout_constraintEnd_toStartOf="@+id/incrementMinutes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decrementMinutes" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/be_vietnam_semibold"
        android:text="@string/stop"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/quoteView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startButton"
        app:layout_constraintTop_toBottomOf="@+id/incrementMinutes" />

</androidx.constraintlayout.widget.ConstraintLayout>